Added Coil and Google Sign In button composables

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Qaizen</string>
+    <string name="web_client_id">87554971667-4pn7ch1vg3tousjpcl22hbr5g8k2upb6.apps.googleusercontent.com</string>
 </resources>
