Updated Admin res

--- a/admin/src/main/res/values/strings.xml
+++ b/admin/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Qaizen Admin</string>
+    <string name="permission_request_text">To get the best experience, this application requires permission to access your location. Denying this permission may restrict your ability to use location-based features.</string>
+    <string name="go_to_settings_description">In case you are unable to give permission from here, please go to Settings > Permissions > Location and allow the permission manually.</string>
 </resources>
